prevent some subreddit styles from breaking collapsers

--- a/css/comment-collapser.css
+++ b/css/comment-collapser.css
@@ -1,3 +1,6 @@
+.thing .midcol {
+    position: static !important;
+}
 
 .expander {
     font-style: normal !important;
